# ChangeLog for dev-lang/gnat-gcc
# Copyright 1999-2010 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/dev-lang/gnat-gcc/ChangeLog,v 1.33 2010/01/25 18:58:17 george Exp $

  25 Jan 2010; George Shapovalov <george@gentoo.org>
  gnat-gcc-4.3.3-r1.ebuild:
  added bootstrap for x86 (#276568)

*gnat-gcc-4.3.3-r1 (21 Jan 2010)

  21 Jan 2010; George Shapovalov <george@gentoo.org>
  +gnat-gcc-4.3.3-r1.ebuild:
  new revision, uses new bootstrap, based on gcc-4.3

  28 Mar 2009; nixnut <nixnut@gentoo.org> gnat-gcc-4.3.2.ebuild:
  ppc stable #257800

  08 Feb 2009; Markus Meier <maekke@gentoo.org> gnat-gcc-4.3.2.ebuild:
  amd64/x86 stable, bug #257800

  05 Feb 2009; George Shapovalov <george@gentoo.org> ChangeLog:
  removed old versions

*gnat-gcc-4.3.3 (05 Feb 2009)

  05 Feb 2009; George Shapovalov <george@gentoo.org> +gnat-gcc-4.3.3.ebuild:
  new version

  23 Oct 2008; George Shapovalov <george@gentoo.org> gnat-gcc-3.4.6.ebuild:
  fixed repoman complaint about not using inherited autotools

*gnat-gcc-4.3.2 (23 Oct 2008)

  23 Oct 2008; George Shapovalov <george@gentoo.org> +gnat-gcc-4.3.2.ebuild:
  new version

  25 Jun 2008; George Shapovalov <george@gentoo.org> gnat-gcc-4.3.0.ebuild,
  gnat-gcc-4.3.1.ebuild:
  added gmp and mpfr to DEPEND per #223751 (thanks to Dirk Heinrichs for
  spotting this)

*gnat-gcc-4.3.1 (10 Jun 2008)

  10 Jun 2008; George Shapovalov <george@gentoo.org> +gnat-gcc-4.3.1.ebuild:
  new version out

  17 Mar 2008; Santiago M. Mola <coldwind@gentoo.org> gnat-gcc-3.4.6.ebuild,
  gnat-gcc-4.2.2.ebuild:
  amd64 stable wrt bugs #209000 and #208997

  12 Mar 2008; George Shapovalov <george@gentoo.org> ChangeLog:
  finally the 4.3 release. This one should have the best Ada-2005 support atm.

*gnat-gcc-4.3_pre20080208 (15 Feb 2008)

  15 Feb 2008; George Shapovalov <george@gentoo.org>
  +gnat-gcc-4.3_pre20080208.ebuild:
  added the 4.3 snapshot in preparison for release
